--- a/source/sass/blocks/editing.scss
+++ b/source/sass/blocks/editing.scss
@@ -1,332 +1,326 @@
-.editing {
-  &__list {
-    position: relative;
-    padding-top: 34px;
-    padding-bottom: 100px;
-    display: flex;
-    width: 100%;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-  }
+.editing__list {
+  position: relative;
+  padding-top: 34px;
+  padding-bottom: 100px;
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
 
-  &__radio {
-    display: none;
-  }
+.editing__radio {
+  display: none;
+}
 
-  &__range {
-    display: none;
-    width: 240px;
-    margin: 0 auto 61px;
-    position: absolute;
-    bottom: 0;
-    left: 18px;
-  }
+.editing__range {
+  display: none;
+  width: 240px;
+  margin: 0 auto 61px;
+  position: absolute;
+  bottom: 0;
+  left: 18px;
+}
 
-  &__range-line {
-    display: none;
-    width: 240px;
-    height: 2px;
-    margin: 0 auto 72px;
-    position: absolute;
-    bottom: 0;
-    left: 18px;
+.editing__range-line {
+  display: none;
+  width: 240px;
+  height: 2px;
+  margin: 0 auto 72px;
+  position: absolute;
+  bottom: 0;
+  left: 18px;
 
-    background-color: $black;
-  }
+  background-color: $black;
+}
 
-  &__range-line::before {
-    content: "";
-    display: block;
-    position: absolute;
-    top: -6px;
-    left: 0;
-    box-sizing: border-box;
-    width: 14px;
-    height: 15px;
-    border: 2px solid $pink;
-    border-radius: 50%;
+.editing__range-line::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: -6px;
+  left: 0;
+  box-sizing: border-box;
+  width: 14px;
+  height: 15px;
+  border: 2px solid $pink;
+  border-radius: 50%;
 
-    background-color: $white;
-  }
+  background-color: $white;
+}
 
-  &__range-line--crop::before {
-    left: 80%;
-  }
+.editing__range-line--crop::before {
+  left: 80%;
+}
 
-  &__element::before {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 100vw;
-    height: 1px;
-    top: 154px;
-    left: calc(-50vw + 140px);
-    background-color: rgba($blue--dark, 0.033);
-  }
+.editing__element::before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100vw;
+  height: 1px;
+  top: 154px;
+  left: calc(-50vw + 140px);
+  background-color: rgba($blue--dark, 0.033);
+}
 
-  &__element:nth-child(2)::before,
-  &__element:nth-child(3)::before {
-    display: none;
-  }
+.editing__element:nth-child(2)::before,
+.editing__element:nth-child(3)::before {
+  display: none;
+}
 
-  &__radio--crop:checked ~ &__list &__range--crop,
-  &__radio--fill:checked ~ &__list &__range--fill,
-  &__radio--contrast:checked ~ &__list &__range--contrast {
-    display: block;
-  }
+.editing__radio--crop:checked ~ .editing__list .editing__range--crop,
+.editing__radio--fill:checked ~ .editing__list .editing__range--fill,
+.editing__radio--contrast:checked ~ .editing__list .editing__range--contrast {
+  display: block;
+}
 
-  &__radio--crop:checked ~ &__list &__range-line--crop,
-  &__radio--fill:checked ~ &__list &__range-line--fill,
-  &__radio--contrast:checked ~ &__list &__range-line--contrast {
-    display: block;
-  }
+.editing__radio--crop:checked ~ .editing__list .editing__range-line--crop,
+.editing__radio--fill:checked ~ .editing__list .editing__range-line--fill,
+.editing__radio--contrast:checked ~ .editing__list .editing__range-line--contrast {
+  display: block;
+}
 
-  &__icon {
-    fill: rgba($blue--dark, 0.3);
-  }
+.editing__icon {
+  fill: rgba($blue--dark, 0.3);
+}
 
-  &__icon:hover {
-    fill: rgba($blue--dark, 0.5);
-  }
+.editing__icon:hover {
+  fill: rgba($blue--dark, 0.5);
+}
 
-  &__icon:active {
-    fill: $pink;
-  }
+.editing__icon:active {
+  fill: $pink;
+}
 
-  &__radio--crop:checked ~ &__list &__icon--crop,
-  &__radio--fill:checked ~ &__list &__icon--fill,
-  &__radio--contrast:checked ~ &__list &__icon--contrast {
-    fill: $pink;
-  }
+.editing__radio--crop:checked ~ .editing__list .editing__icon--crop,
+.editing__radio--fill:checked ~ .editing__list .editing__icon--fill,
+.editing__radio--contrast:checked ~ .editing__list .editing__icon--contrast {
+  fill: $pink;
+}
 
-  &__icon--crop {
-    margin-left: -11px;
-  }
+.editing__icon--crop {
+  margin-left: -11px;
+}
 
-  &__icon--fill {
-    margin-left: -15px;
-    margin-top: 2px;
-  }
+.editing__icon--fill {
+  margin-left: -15px;
+  margin-top: 2px;
+}
 
-  &__icon--contrast {
-    margin-left: -6px;
-    margin-top: 8px;
-  }
+.editing__icon--contrast {
+  margin-left: -6px;
+  margin-top: 8px;
+}
 
-  &__button {
-    margin-bottom: 12px;
-  }
+.editing__button {
+  margin-bottom: 12px;
 }
 
 @media (min-width: $tablet-width) {
-  .editing {
-    &__img {
-      width: 300px;
-      height: 400px;
-    }
+  .editing__img {
+    width: 300px;
+    height: 400px;
+  }
 
-    &__input-wrapper {
-      width: 260px;
-      padding-right: 13px;
-    }
+  .editing__input-wrapper {
+    width: 260px;
+    padding-right: 13px;
+  }
 
-    &__list {
-      display: block;
-      padding-top: 9px;
-      padding-bottom: 45px;
-    }
+  .editing__list {
+    display: block;
+    padding-top: 9px;
+    padding-bottom: 45px;
+  }
 
-    &__element {
-      display: flex;
-      justify-content: space-around;
-      padding-bottom: 19px;
-      padding-right: 1px;
-      position: relative;
-    }
+  .editing__element {
+    display: flex;
+    justify-content: space-around;
+    padding-bottom: 19px;
+    padding-right: 1px;
+    position: relative;
+  }
 
-    &__element::before {
-      content: "";
-      display: block;
-      position: absolute;
-      width: 275px;
-      height: 1px;
-      top: 46px;
-      left: -2px;
-      background-color: rgba($blue--dark, 0.033);
-    }
+  .editing__element::before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 275px;
+    height: 1px;
+    top: 46px;
+    left: -2px;
+    background-color: rgba($blue--dark, 0.033);
+  }
 
-    &__element:nth-child(2)::before,
-    &__element:nth-child(3)::before {
-      display: block;
-    }
+  .editing__element:nth-child(2)::before,
+  .editing__element:nth-child(3)::before {
+    display: block;
+  }
 
-    &__label {
-      margin-bottom: 20px;
-      margin-left: -3px;
-    }
+  .editing__label {
+    margin-bottom: 20px;
+    margin-left: -3px;
+  }
 
-    &__icon--crop {
-      width: 22px;
-      height: 22px;
-    }
+  .editing__icon--crop {
+    width: 22px;
+    height: 22px;
+  }
 
-    &__icon--fill {
-      margin-left: -12px;
-      margin-top: 4px;
-      width: 24px;
-      height: 24px;
-    }
+  .editing__icon--fill {
+    margin-left: -12px;
+    margin-top: 4px;
+    width: 24px;
+    height: 24px;
+  }
 
-    &__icon--contrast {
-      width: 16px;
-      height: 16px;
-      margin-top: 0;
-    }
+  .editing__icon--contrast {
+    width: 16px;
+    height: 16px;
+    margin-top: 0;
+  }
 
-    &__icon,
-    &__icon:hover,
-    &__icon:active {
-      fill: $pink;
-    }
+  .editing__icon,
+  .editing__icon:hover,
+  .editing__icon:active {
+    fill: $pink;
+  }
 
-    &__radio ~ &__list &__range {
-      position: static;
-    }
+  .editing__radio ~ .editing__list .editing__range {
+    position: static;
+  }
 
-    &__radio ~ &__list &__range-line {
-      position: static;
-    }
+  .editing__radio ~ .editing__list .editing__range-line {
+    position: static;
+  }
 
-    &__range {
-      display: block;
-      width: 202px;
-      margin: 0;
-      margin-right: -8px;
-    }
+  .editing__range {
+    display: block;
+    width: 202px;
+    margin: 0;
+    margin-right: -8px;
+  }
 
-    &__range-line {
-      display: block;
-      width: 202px;
-      margin: 12px -11px 0 0;
-    }
+  .editing__range-line {
+    display: block;
+    width: 202px;
+    margin: 12px -11px 0 0;
+  }
 
-    &__range-line--crop::before {
-      top: 4px;
-      left: 199px;
-    }
+  .editing__range-line--crop::before {
+    top: 4px;
+    left: 199px;
+  }
 
-    &__range-line--fill::before {
-      top: 7px;
-      left: 78px;
-    }
+  .editing__range-line--fill::before {
+    top: 7px;
+    left: 78px;
+  }
 
-    &__range-line--contrast::before {
-      top: 5px;
-      left: 149px;
-    }
+  .editing__range-line--contrast::before {
+    top: 5px;
+    left: 149px;
+  }
 
-    &__button {
-      margin-bottom: 24px;
-    }
+  .editing__button {
+    margin-bottom: 24px;
+  }
 
-    &__button:last-child {
-      margin-bottom: 0;
-    }
+  .editing__button:last-child {
+    margin-bottom: 0;
   }
 }
 
 @media (min-width: $desktop-width) {
-  .editing {
-    &__input-wrapper {
-      width: 410px;
-      padding-right: 0;
-    }
+  .editing__input-wrapper {
+    width: 410px;
+    padding-right: 0;
+  }
 
-    &__list {
-      padding-top: 0;
-    }
+  .editing__list {
+    padding-top: 0;
+  }
 
-    &__label {
-      margin-bottom: 22px;
-      margin-top: 0;
-      margin-left: 1px;
-    }
+  .editing__label {
+    margin-bottom: 22px;
+    margin-top: 0;
+    margin-left: 1px;
+  }
 
-    &__element {
-      padding-bottom: 0;
-      justify-content: space-between;
-    }
+  .editing__element {
+    padding-bottom: 0;
+    justify-content: space-between;
+  }
 
-    &__element:first-child::before {
-      width: 410px;
-    }
+  .editing__element:first-child::before {
+    width: 410px;
+  }
 
-    &__element::before {
-      top: 53px;
-      left: 0;
-    }
+  .editing__element::before {
+    top: 53px;
+    left: 0;
+  }
 
-    &__icon--crop {
-      width: 44px;
-      height: 45px;
-      margin-left: -1px;
-      margin-top: -3px;
-    }
+  .editing__icon--crop {
+    width: 44px;
+    height: 45px;
+    margin-left: -1px;
+    margin-top: -3px;
+  }
 
-    &__icon--fill {
-      width: 48px;
-      height: 48px;
-      margin-left: 0;
-      margin-top: -1px;
-    }
+  .editing__icon--fill {
+    width: 48px;
+    height: 48px;
+    margin-left: 0;
+    margin-top: -1px;
+  }
 
-    &__icon--contrast {
-      width: 32px;
-      height: 32px;
-      margin-left: 6px;
-      margin-top: 2px;
-    }
+  .editing__icon--contrast {
+    width: 32px;
+    height: 32px;
+    margin-left: 6px;
+    margin-top: 2px;
+  }
 
-    &__range {
-      width: 288px;
-      margin-right: 30px;
-      margin-top: 10px;
-    }
+  .editing__range {
+    width: 288px;
+    margin-right: 30px;
+    margin-top: 10px;
+  }
 
-    &__range-line {
-      width: 288px;
-      margin-right: 30px;
-      margin-top: 20px;
-    }
+  .editing__range-line {
+    width: 288px;
+    margin-right: 30px;
+    margin-top: 20px;
+  }
 
-    &__range-line--crop::before {
-      top: 13px;
-      left: 163px;
-    }
+  .editing__range-line--crop::before {
+    top: 13px;
+    left: 163px;
+  }
 
-    &__range-line--fill::before {
-      top: 14px;
-      left: 339px;
-    }
+  .editing__range-line--fill::before {
+    top: 14px;
+    left: 339px;
+  }
 
-    &__range-line--contrast::before {
-      top: 13px;
-      left: 252px;
-    }
+  .editing__range-line--contrast::before {
+    top: 13px;
+    left: 252px;
+  }
 
-    &__element:nth-child(2) &__label {
-      margin-bottom: 15px;
-    }
+  .editing__element:nth-child(2) .editing__label {
+    margin-bottom: 15px;
+  }
 
-    &__button {
-      width: 183px;
-      margin: 0;
-    }
+  .editing__button {
+    width: 183px;
+    margin: 0;
+  }
 
-    &__buttons-wrapper {
-      display: flex;
-      justify-content: space-between;
-      margin-top: 93px;
-    }
+  .editing__buttons-wrapper {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 93px;
   }
 }
