--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -1,68 +1,66 @@
-.site-list {
-  &__item {
-    text-align: center;
-    vertical-align: center;
-    box-shadow: 0 1px 0 0 $black, inset 0 1px 0 0 rgba($white, 0.15);
-    margin-top: 1px;
-  }
+.site-list__item {
+  text-align: center;
+  vertical-align: center;
+  box-shadow: 0 1px 0 0 $black, inset 0 1px 0 0 rgba($white, 0.15);
+  margin-top: 1px;
+}
 
-  &__item:hover a[href] {
-    color: $menu-mobile-color--hover;
-  }
+.site-list__item:hover a[href] {
+  color: $menu-mobile-color--hover;
+}
 
-  &__item:active a[href] {
-    color: $menu-mobile-color--active;
-  }
+.site-list__item:active a[href] {
+  color: $menu-mobile-color--active;
+}
 
-  &__link {
-    transition: 0.2s;
-    display: block;
+.site-list__link {
+  transition: 0.2s;
+  display: block;
 
-    width: 100%;
-    height: 100%;
-    padding: 16px 0 15px;
+  width: 100%;
+  height: 100%;
+  padding: 16px 0 15px;
 
-    color: $menu-mobile-color;
-    text-decoration: none;
-  }
+  color: $menu-mobile-color;
+  text-decoration: none;
 }
 
 @media (min-width: $desktop-width) {
   .site-list {
     display: flex;
     flex-wrap: wrap;
+  }
 
-    &__item {
-      margin-left: 80px;
+  .site-list__item {
+    margin-left: 80px;
 
-      font-weight: normal;
-      font-size: 18px;
-      text-transform: none;
-      box-shadow: none;
-    }
+    font-weight: normal;
+    font-size: 18px;
+    text-transform: none;
+    box-shadow: none;
+  }
 
-    &__item--active {
-      position: relative;
-    }
+  .site-list__item--active {
+    position: relative;
+  }
 
-    &__item--active::before {
-      content: "";
-      display: block;
-      position: absolute;
-      width: 100%;
-      height: 2px;
-      background-color: $white;
+  .site-list__item--active::before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: $white;
 
-      bottom: 33px;
-      left: 1px;
-    }
+    bottom: 33px;
+    left: 1px;
+  }
 
-    &__link {
-      display: flex;
-      align-items: center;
-      padding: 0;
-      width: 100%;
-      min-height: 109px;
-    }
+  .site-list__link {
+    display: flex;
+    align-items: center;
+    padding: 0;
+    width: 100%;
+    min-height: 109px;
   }
 }
